# perspective

./: .gitignore  README  interface.py  main.py  pyproject.toml
agent/: actor.py  constants.py  memory.py  persona.py  utils.py
agent/personas/: enlightening.yaml  entrepreneur.yaml  eric.yaml  lauren.yaml  lawyer.yaml  life-coach.yaml  lucy.yaml
models/: constants.py  llm.py  sts.py  stt.py  tts.py
realtime/: constants.py  prompts.py
realtime/prompts/: base.prompt.md
ui/: components.py  partials.py  signals.py  types.py  ui.tcss
utils/: audio.py  secrets.py
