[project]
name = "derrick"
version = "0.1.0"
description = "Derrick in realtime"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "espeakng==1.0.3",
    "google-genai>=1.38.0",
    "hnswlib>=0.8.0",
    "ipython>=9.5.0",
    "munch>=4.0.0",
    "numpy>=2.3.2",
    "ollama>=0.5.3",
    "openai>=1.107.2",
    "openai-agents>=0.3.0",
    "phonemizer>=3.3.0",
    "pillow>=11.3.0",
    "pip>=25.2",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "pynput>=1.8.1",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0.2",
    "scipy>=1.16.1",
    "setuptools>=80.9.0",
    "sounddevice>=0.5.2",
    "textual>=6.1.0",
    "textual-dev>=1.7.0",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "websocket-client>=1.8.0",
]
